--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "seed": "node -r dotenv/config ./scripts/seed.js",
-    "lint": "next lint"
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -28,9 +27,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "@types/react-dom": "18.3.0"
+   
   },
   "engines": {
     "node": ">=20.12.0"
